--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,102 @@
 .square-one:hover{
     background-color: red;
 }
+
+.square-two{
+    background-color: red;
+    width: 100px;
+    height: 100px;
+    transition-duration: 2s
+}
+
+.square-two:active{
+    width: 100%
+}
+
+.square-three{
+    background-color: red;
+    width: 100px;
+    height: 100px;
+    transition-duration: 2s;
+}
+
+.square-three:hover{
+    border-radius: 50%
+}
+
+.square-four{
+    background-color: red;
+    width: 100px;
+    height: 100px;
+    transition-duration: 2s;
+}
+
+.square-four:hover{
+    background-color: white
+}
+
+.square-five{
+    background-color: red;
+    width: 50px;
+    height: 50px;
+    transition-duration: 2s;
+}
+
+.square-five:hover{
+    width: 100px;
+    height: 100px
+}
+
+.square-five:active{
+    width: 20px;
+    height: 20px
+}
+
+.img-one img{
+    width: 500px
+}
+
+.img-one img:hover{
+    filter: grayscale(1);
+}
+
+.img-two img{
+    width: 500px;
+    transition-duration: 2s
+}
+
+.img-two img:hover{
+    filter: grayscale(0.6) sepia(0.5);
+}
+
+.img-three img{
+    width: 500px;
+    transition-duration: 2s
+}
+
+.img-three img:hover{
+    filter: grayscale(0.6) sepia(0.5);
+    border-radius: 20px
+}
+
+.img-four img{
+    width: 500px;
+    transition-duration: 2s
+}
+
+.img-four img:hover{
+    filter: grayscale(0.6) sepia(0.5);
+    border-radius: 20px;
+    transform: scale(1.5);
+}
+
+.icon-one i{
+    font-size: 60px;
+    animation: spin 1s linear infinite
+}
+
+@keyframes spin {
+    0%{
+        transform: rotate(1turn);
+    }
+}
